maintenance/cabinet-34/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: funhouse-room-room3
spec:
  selector:
    funhouse.riddler/room-id: room3
  ports:
    - name: http
      port: 80
      targetPort: http
